--- a/index.html
+++ b/index.html
@@ -347,4 +347,46 @@ function checkAnswer(selectedOptionElement, selectedMeaning) {
                 opt.classList.add('correct');
             }
         });
-        // Decrease mastery for incorrect answer (if not 
+        // Decrease mastery for incorrect answer (if not 0)
+        currentQuizWord.mastery = Math.max(currentQuizWord.mastery - 10, 0);
+    }
+    document.getElementById('nextQuizBtn').style.display = 'block';
+    save(); // Update mastery and score
+}
+
+
+// --- Utility Functions ---
+function playTone(freq, dur) {
+    const ctx = new (window.AudioContext || window.webkitAudioContext)();
+    const osc = ctx.createOscillator();
+    const gain = ctx.createGain();
+    osc.connect(gain); gain.connect(ctx.destination);
+    osc.frequency.value = freq;
+    gain.gain.setValueAtTime(0.1, ctx.currentTime);
+    osc.start(); osc.stop(ctx.currentTime + dur);
+}
+
+function speak(text) {
+    const msg = new SpeechSynthesisUtterance(text);
+    msg.lang = 'en-US';
+    speechSynthesis.speak(msg);
+}
+
+function toggleTheme() {
+    document.body.classList.toggle('dark');
+}
+
+function exportData() {
+    const blob = new Blob([JSON.stringify(data)], {type:'application/json'});
+    const a = document.createElement('a');
+    a.href = URL.createObjectURL(blob);
+    a.download = 'vocab_backup.json';
+    a.click();
+}
+
+// Initial Render
+render();
+</script>
+
+</body>
+</html>
